[gd_scene load_steps=6 format=3 uid="uid://bwiw3ssnoab66"]

[ext_resource type="Script" path="res://roll_3d_dice/scripts/behaviour/ui/dice_roll_animation_ui.gd" id="1_2vt5b"]
[ext_resource type="PackedScene" uid="uid://dlou2h2p7iwcx" path="res://roll_3d_dice/scenes/ui/dice_roll_ui.tscn" id="1_jt7fy"]
[ext_resource type="Resource" uid="uid://q8vgrysyh3th" path="res://roll_3d_dice/assets/data/dice_roll_result.tres" id="3_s53re"]
[ext_resource type="Texture2D" uid="uid://o1ccr88acprb" path="res://_placeholders/game_background_placeholder.jpg" id="4_ikvpr"]
[ext_resource type="PackedScene" uid="uid://u4wfd8g6qr4k" path="res://roll_3d_dice/scenes/scenarios/dice_roll_animation.tscn" id="5_lqj4j"]

[node name="DiceRollAnimationUI" type="Control" node_paths=PackedStringArray("dice_results_ui")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2vt5b")
dice_results_ui = NodePath("Input/DiceResultsUI")
dice_roll_ui = ExtResource("1_jt7fy")
dice_roll_result = ExtResource("3_s53re")

[node name="Background (PLACEHOLDER)" type="TextureRect" parent="."]
self_modulate = Color(0.286275, 0.286275, 0.286275, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ikvpr")

[node name="DiceRollAnimationRender" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 470.0
offset_top = 166.0
offset_right = -450.0
offset_bottom = -414.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiceRollAnimation" parent="DiceRollAnimationRender" instance=ExtResource("5_lqj4j")]
handle_input_locally = false
render_target_update_mode = 4

[node name="Input" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiceResultsUI" type="VBoxContainer" parent="Input"]
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 218.0
offset_bottom = 116.0
alignment = 1

[node name="Add" type="Button" parent="Input/DiceResultsUI"]
layout_mode = 2
text = "Add"

[node name="Remove" type="Button" parent="Input/DiceResultsUI"]
layout_mode = 2
text = "Remove"

[node name="RollButton" type="Button" parent="Input"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -135.0
offset_right = 175.0
offset_bottom = -50.0
grow_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Roll "

[node name="CheckBox" type="CheckBox" parent="Input"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -196.0
offset_right = 146.0
offset_bottom = -160.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
button_pressed = true
text = "Critical"

[connection signal="animation_ended" from="DiceRollAnimationRender/DiceRollAnimation" to="Input" method="show"]
[connection signal="animation_started" from="DiceRollAnimationRender/DiceRollAnimation" to="Input" method="hide"]
[connection signal="pressed" from="Input/DiceResultsUI/Add" to="." method="on_add"]
[connection signal="pressed" from="Input/DiceResultsUI/Remove" to="." method="on_remove"]
[connection signal="pressed" from="Input/RollButton" to="DiceRollAnimationRender/DiceRollAnimation" method="start_animation"]
[connection signal="toggled" from="Input/CheckBox" to="DiceRollAnimationRender/DiceRollAnimation" method="set_critical"]
